--- a/data/config.json
+++ b/data/config.json
@@ -1,4 +1,4 @@
 {
-  "ACTIVE_SEQUENCE_NAME": "dexter",
-  "ACTIVE_SEQUENCE_PATH": "C:\\Work\\Projects\\Apps\\WindowPet\\assets\\library\\dexter"
+  "ACTIVE_SEQUENCE_NAME": "casper",
+  "ACTIVE_SEQUENCE_PATH": "C:\\Work\\Projects\\Apps\\WindowPet\\assets\\library\\casper"
 }
